Implementing tools start via yaml config infos

--- a/config/plugin.yaml
+++ b/config/plugin.yaml
@@ -1,18 +1,19 @@
 
+version: 2.0.0
 tools:
-  - bestfitplane_tool_params:
-      tool_nm: Best fit plane
-      icon_nm: bestfitplane.png
-      whtsths_dscr: Best fit plane from points
-  - demplaneinters_tool_params:
-      tool_nm: DEM-plane intersection
-      icon_nm: qgsurf.png
-      whtsths_dscr: Intersection of planar surfaces with topography
-  - stereonet_tool_params:
-      tool_nm: Stereonet
-      icon_nm: stereonet.png
-      whtsths_dscr: Plotting of geological data in stereonet
-  - about_dlg_params:
-      tool_nm: About
-      icon_nm: about.png
-      whtsths_dscr: qgSurf about
+  bestfitplane_tool_params:
+    tool_nm: Best fit plane
+    icon_nm: bestfitplane.png
+    whtsths_dscr: Best fit plane from points
+  demplaneinters_tool_params:
+    tool_nm: DEM-plane intersection
+    icon_nm: qgsurf.png
+    whtsths_dscr: Intersection of planar surfaces with topography
+  stereonet_tool_params:
+    tool_nm: Stereonet
+    icon_nm: stereonet.png
+    whtsths_dscr: Plotting of geological data in stereonet
+  about_dlg_params:
+    tool_nm: About
+    icon_nm: about.png
+    whtsths_dscr: qgSurf about
