--- a/config/plugin.yaml
+++ b/config/plugin.yaml
@@ -11,7 +11,7 @@ tools:
     whtsths_dscr: Intersection of planar surfaces with topography
   stereonet_tool_params:
     tool_nm: Stereonet
-    icon_nm: stereonet.png
+    icon_nm: stereoplot.png
     whtsths_dscr: Plotting of geological data in stereonet
   about_dlg_params:
     tool_nm: About
