Finalizing shapefiles exports

--- a/config/output.yaml
+++ b/config/output.yaml
@@ -1,9 +1,10 @@
 
 pt_shapefile:
+  - {name: id_sol,     ogr_type: ogr.OFTInteger            }
+  - {name: id_pt,      ogr_type: ogr.OFTInteger            }
   - {name: x,          ogr_type: ogr.OFTReal               }
   - {name: y,          ogr_type: ogr.OFTReal               }
   - {name: z,          ogr_type: ogr.OFTReal               }
-  - {name: id_sol,     ogr_type: ogr.OFTInteger            }
   - {name: dip_dir,    ogr_type: ogr.OFTReal               }
   - {name: dip_ang,    ogr_type: ogr.OFTReal               }
   - {name: label,      ogr_type: ogr.OFTString,  width: 255}
