--- a/config/sqlite.yaml
+++ b/config/sqlite.yaml
@@ -7,8 +7,8 @@ sqlite_db:
         - id:         {name: id,         type: INTEGER PRIMARY KEY AUTOINCREMENT UNIQUE NOT NULL}
         - dip_dir:    {name: dip_dir,    type: REAL NOT NULL}
         - dip_ang:    {name: dip_ang,    type: REAL NOT NULL}
-        - label:      {name: label,      type: TEXT}
-        - comments:   {name: comments,   type: TEXT}
+        - data_set:   {name: data_set,   type: TEXT}
+        - comments:   {name: notes,      type: TEXT}
         - creat_time: {name: creat_time, type: DATE NOT NULL}
 
     src_pts:
@@ -16,6 +16,6 @@ sqlite_db:
       fields:
         - id_sol:     {name: id_sol,     type: INTEGER NOT NULL}
         - id_pt:      {name: id_pt,      type: INTEGER NOT NULL}
-        - x:          {name: x,          type: REAL NOT NULL}
-        - y:          {name: y,          type: REAL NOT NULL}
+        - longitude:  {name: longitude,  type: REAL NOT NULL}
+        - latitude:   {name: latitude,   type: REAL NOT NULL}
         - z:          {name: z,          type: REAL NOT NULL}
